# Nestor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  logger.cpp  main.cpp
CMake/: FindICU.cmake  FindLibConfig++.cmake  FindLibCurl.cmake  FindLibEv.cmake  FindLog4cplus.cmake  FindTinyXML2.cmake
common/: CMakeLists.txt  logger.cpp  logger.h
imap/: CMakeLists.txt  imap_parser.cpp  imap_parser.h  imap_session.cpp  imap_session.h  imap_string.cpp  imap_string.h
include/: logger.h
lib/sqlite-amalgamation-3080403/: CMakeLists.txt
net/: CMakeLists.txt  abstract_client_socket.cpp  abstract_client_socket.h  http_client.cpp  http_client.h  http_multi_client.cpp  http_multi_client.h  http_resource.cpp  http_resource.h  http_response_parser.cpp  http_response_parser.h  io_observer.cpp  io_observer.h  socket_listener.cpp  socket_listener.h  socket_single.cpp  socket_single.h
rss/: CMakeLists.txt  rss_channel.cpp  rss_channel.h  rss_object.cpp  rss_object.h  rss_xml_parser.cpp  rss_xml_parser.h
service/: CMakeLists.txt  channels_update_worker.cpp  channels_update_worker.h  configuration.cpp  configuration.h  service.cpp  service.h  sqlite_connection.cpp  sqlite_connection.h  sqlite_provider.cpp  sqlite_provider.h  types.cpp  types.h
tests/: CMakeLists.txt  imap_parser_test.cpp  imap_parser_test.h  imap_session_test.cpp  imap_session_test.h  imap_string_test.cpp  imap_string_test.h  run.cpp
utils/: CMakeLists.txt  string.cpp  string.h  timestamp.cpp  timestamp.h
